Add basic placeholder structure

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantastic Fungi</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <h1>Fantastic Fungi</h1>
+    <!--Insert Fungi API info here-->
+    <div id="fungiGallery"></div>
+
+    <script src="js/script.js"></script>
 
 </body>
 
