Integrate API + create image gallery

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <h1>Fantastic Fungi</h1>
     <!--Insert Fungi API info here-->
-    <div id="fungiGallery"></div>
+    <div id="fungiGallery">
+    </div>
 
     <script src="js/script.js"></script>
 
