Show details on page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div id="fungiGallery"></div>
     <div id="details"></div>
 
-    <script src="js/script.js"></script>
+    <script src="js/bundle.js" type="text/javascript"></script>
+    <script src="js/proxy.js" type="text/module"></script>
+
 
 </body>
 
