--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantastic Fungi</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css" type="text/css">
 </head>
 
 <body>
@@ -15,9 +15,7 @@
     <div id="fungiGallery"></div>
     <div id="details"></div>
 
-    <script src="js/bundle.js" type="text/javascript"></script>
-    <script src="js/proxy.js" type="text/module"></script>
-
+    <script src="./js/bundle.js"></script>
 
 </body>
 
