--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantastic Fungi</title>
-    <link rel="stylesheet" href="../public/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 
 <body>
     <h1>Fantastic Fungi</h1>
     <!--Insert Fungi API info here-->
     <div id="fungiGallery"></div>
-    <div id="details"></div>
+    <div id="details">
+        <h2 id="scientificName"></h2>
+        <p>Generic Name: <span id="genericName"></span></p>
+        <p>Country: <span id="country"></span></p>
+        <p>Species: <span id="species"></span></p>
+        <p>Longitude: <span id="longitude"></span></p>
+        <p>Latitude: <span id="latitude"></span></p>
+    </div>
 
-    <script src="./js/bundle.js"></script>
+    <script src="js/bundle.js"></script>
 
 </body>
 
