Continue rewrite - new API

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Fantastic Fungi</h1>
-    <!--Insert Fungi API info here-->
     <div id="fungiGallery"></div>
+    <div id="details"></div>
 
     <script src="js/bundle.js"></script>
 
