--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <h1>Fantastic Fungi</h1>
-    <div id="fungiGallery"></div>
+    <div id="gallery"></div>
     <div id="details"></div>
 
-    <script src="js/bundle.js"></script>
+    <script src="/js/bundle.js"></script>
 
 </body>
 
