Update detail access

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Fantastic Fungi</h1>
+    <h1>Gallery</h1>
     <div id="gallery"></div>
     <div id="details"></div>
     <script src="/js/bundle.js"></script>
